Converts celo-codebase/protocol to docusaurus

--- a/src/components/YouTube.module.css
+++ b/src/components/YouTube.module.css
@@ -1,4 +1,5 @@
 .container {
+  margin: 24px 0px;
   width: 100%;
   /* Small trick to get the height a ratio of the width */
   padding-bottom: 56.25%;
