--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -314,3 +314,9 @@ div[class^="announcementBar_"] {
   padding: 0 var(--ifm-pre-padding);
   border-left: 3px solid #ff000080;
 }
+
+@media only screen and (max-width: 800px) {
+  .DocSearch-Modal {
+    padding-top: 50px;
+  }
+}
